# RustyBrainBenders

./: .gitignore  README.md
1_library_management/: README.md
1_library_management/src/: main.rs
2_csv_data_processor/: Cargo.toml  README.md  docker-compose.yml
2_csv_data_processor/src/: csv_processor.rs  db_management.rs  main.rs  user_cli.rs
3_area/src/: main.rs
genpoint_ops/: Cargo.toml  README.md
genpoint_ops/src/: main.rs
genpoint_ops/src/common/: traits.rs
info_traits/: Cargo.toml  README.md
info_traits/src/: main.rs
info_traits/src/traits/: information.rs
