[package]
name = "csv_data_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
tokio = "1.29.1"
sqlx = {version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"]}
futures = "0.3.28"
